# Nirvesta

./: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
backend/: .env.example  README.md  mcp_server.py  pyproject.toml
backend/app/: __init__.py  api.py  celery_app.py  config.py  main.py  models.py  services.py  tasks.py
backend/data/: market_snapshot.json  mock_portfolio_upload.csv  portfolio_details.json
n8n/workflows/: cio_agent.json  data_archaeologist.json  market_oracle.json  master_flow.json
src/: App.tsx  index.css  routes.tsx
src/auth/: AuthContext.tsx  ProtectedRoute.tsx
src/components/: MaterialIcon.tsx  PortfolioImportPanel.tsx  chrome.tsx  ui.tsx
src/lib/: api.ts
src/pages/: AuthConnectPage.tsx  CommandCenterPage.tsx  ConciergePage.tsx  LandingPage.tsx  MarketEnginePage.tsx  PortfolioAuditorPage.tsx  PortfolioRebalancerPage.tsx  SentinelPage.tsx  SettingsPage.tsx  StrategyPage.tsx
supabase/: schema.sql
