[project]
name = "nirvesta-backend"
version = "0.1.0"
description = "FastAPI and MCP backend for the Nirvesta wealth experience."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "mcp>=1.6.0,<2.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
